app/styles/app.css
/* ... */
.prose-sm :where(ul ul, ul ol, ol ul, ol ol):not(:where([class~="not-prose"] *)) {
  margin-top: 0.5714286em;
  margin-bottom: 0.5714286em;
}

.prose-sm :where(hr):not(:where([class~="not-prose"] *)) {
  margin-top: 2.8571429em;
  margin-bottom: 2.8571429em;
}

.prose-sm :where(hr + *):not(:where([class~="not-prose"] *)) {
  margin-top: 0;
}

.prose-sm :where(h2 + *):not(:where([class~="not-prose"] *)) {
  margin-top: 0;
}

.prose-sm :where(h3 + *):not(:where([class~="not-prose"] *)) {
  margin-top: 0;
}

.prose-sm :where(h4 + *):not(:where([class~="not-prose"] *)) {
  margin-top: 0;
}

.prose-sm :where(table):not(:where([class~="not-prose"] *)) {
  font-size: 0.8571429em;
  line-height: 1.5;
}

.prose-sm :where(thead th):not(:where([class~="not-prose"] *)) {
  padding-right: 1em;
  padding-bottom: 0.6666667em;
  padding-left: 1em;
}

.prose-sm :where(thead th:first-child):not(:where([class~="not-prose"] *)) {
  padding-left: 0;
}

.prose-sm :where(thead th:last-child):not(:where([class~="not-prose"] *)) {
  padding-right: 0;
}

.prose-sm :where(tbody td):not(:where([class~="not-prose"] *)) {
  padding-top: 0.6666667em;
  padding-right: 1em;
  padding-bottom: 0.6666667em;
  padding-left: 1em;
}

.prose-sm :where(tbody td:first-child):not(:where([class~="not-prose"] *)) {
  padding-left: 0;
}

.prose-sm :where(tbody td:last-child):not(:where([class~="not-prose"] *)) {
  padding-right: 0;
}

.prose-sm > :where(:first-child):not(:where([class~="not-prose"] *)) {
  margin-top: 0;
}

.prose-sm > :where(:last-child):not(:where([class~="not-prose"] *)) {
  margin-bottom: 0;
}

.prose-white {
  --tw-prose-body: #fff;
  --tw-prose-headings: #fff;
  --tw-prose-lead: #fff;
  --tw-prose-links: #fff;
  --tw-prose-bold: #fff;
  --tw-prose-counters: #fff;
  --tw-prose-bullets: #fff;
  --tw-prose-hr: #fff;
  --tw-prose-quotes: #fff;
  --tw-prose-quote-borders: #fff;
  --tw-prose-captions: #fff;
  --tw-prose-code: #fff;
  --tw-prose-pre-code: #fff;
  --tw-prose-pre-bg: #fff;
  --tw-prose-th-borders: #fff;
  --tw-prose-td-borders: #fff;
  --tw-prose-invert-body: #fff;
  --tw-prose-invert-headings: #fff;
  --tw-prose-invert-lead: #fff;
  --tw-prose-invert-links: #fff;
  --tw-prose-invert-bold: #fff;
  --tw-prose-invert-counters: #fff;
  --tw-prose-invert-bullets: #fff;
  --tw-prose-invert-hr: #fff;
  --tw-prose-invert-quotes: #fff;
  --tw-prose-invert-quote-borders: #fff;
  --tw-prose-invert-captions: #fff;
  --tw-prose-invert-code: #fff;
  --tw-prose-invert-pre-code: #fff;
  --tw-prose-invert-pre-bg: rgb(0 0 0 / 50%);
  --tw-prose-invert-th-borders: #fff;
  --tw-prose-invert-td-borders: #fff;
}

.headerBlockHeight {
  height: clamp(200px, 35vh, 300px);
}

@media (min-width: 768px) {
  .headerBlockHeight {
    height: clamp(300px, 40vh, 500px);
  }
}

.richtext li > p {
  margin: 0;
}

@font-face {
  font-family: "Roboto";

  font-weight: normal;

  font-style: normal;

  font-display: swap;

  src: url("/fonts/Roboto-Regular.woff2") format("woff2"),
    url("/fonts/Roboto-Regular.ttf") format("truetype");
}

@font-face {
  font-family: "Roboto";

  font-weight: bold;

  font-style: normal;

  font-display: swap;

  src: url("/fonts/Roboto-Bold.woff2") format("woff2"),
    url("/fonts/Roboto-Bold.ttf") format("truetype");
}

@font-face {
  font-family: "Poppins";

  font-weight: normal;

  font-style: normal;

  font-display: swap;

  src: url("/fonts/Poppins-Regular.woff2") format("woff2"),
    url("/fonts/Poppins-Regular.ttf") format("truetype");
}

@font-face {
  font-family: "Poppins";

  font-weight: bold;

  font-style: normal;

  font-display: swap;

  src: url("/fonts/Poppins-Bold.woff2") format("woff2"),
    url("/fonts/Poppins-Bold.ttf") format("truetype");
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

.fixed {
  position: fixed;
}

.absolute {
  position: absolute;
}

.relative {
  position: relative;
}

.bottom-0 {
  bottom: 0px;
}

.right-4 {
  right: 1rem;
}

.top-0 {
  top: 0px;
}

.top-24 {
  top: 6rem;
}

.right-0 {
  right: 0px;
}

.z-50 {
  z-index: 50;
}

.z-10 {
  z-index: 10;
}

.z-20 {
  z-index: 20;
}

.z-30 {
  z-index: 30;
}

.z-0 {
  z-index: 0;
}

.col-span-full {
  grid-column: 1 / -1;
}

.col-span-2 {
  grid-column: span 2 / span 2;
}

.col-start-1 {
  grid-column-start: 1;
}

.col-start-2 {
  grid-column-start: 2;
}

.row-start-1 {
  grid-row-start: 1;
}

.row-start-2 {
  grid-row-start: 2;
}

.m-auto {
  margin: auto;
}

.m-0 {
  margin: 0px;
}

.mx-auto {
  margin-left: auto;
  margin-right: auto;
}

.my-4 {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.mx-3 {
  margin-left: 0.75rem;
  margin-right: 0.75rem;
}

.my-8 {
  margin-top: 2rem;
  margin-bottom: 2rem;
}

.mr-8 {
  margin-right: 2rem;
}

.mr-1 {
  margin-right: 0.25rem;
}

.mb-1 {
  margin-bottom: 0.25rem;
}

.mt-4 {
  margin-top: 1rem;
}

.mt-8 {
  margin-top: 2rem;
}

.mb-4 {
  margin-bottom: 1rem;
}

.mt-32 {
  margin-top: 8rem;
}

.mb-12 {
  margin-bottom: 3rem;
}

.ml-auto {
  margin-left: auto;
}

.block {
  display: block;
}

.inline-block {
  display: inline-block;
}

.flex {
  display: flex;
}

.inline-flex {
  display: inline-flex;
}

.grid {
  display: grid;
}

.contents {
  display: contents;
}

.h-auto {
  height: auto;
}

.h-40 {
  height: 10rem;
}

.h-16 {
  height: 4rem;
}

.h-full {
  height: 100%;
}

.h-8 {
  height: 2rem;
}

.h-\[400px\] {
  height: 400px;
}

.h-6 {
  height: 1.5rem;
}

.h-20 {
  height: 5rem;
}

.h-12 {
  height: 3rem;
}

.max-h-40 {
  max-height: 10rem;
}

.max-h-\[300px\] {
  max-height: 300px;
}

.max-h-\[60vh\] {
  max-height: 60vh;
}

.max-h-12 {
  max-height: 3rem;
}

.min-h-\[256px\] {
  min-height: 256px;
}

.min-h-\[50vh\] {
  min-height: 50vh;
}

.min-h-\[400px\] {
  min-height: 400px;
}

.min-h-\[16rem\] {
  min-height: 16rem;
}

.w-full {
  width: 100%;
}

.w-16 {
  width: 4rem;
}

.w-6 {
  width: 1.5rem;
}
/* ... */

